2005-06-03  Bert Vincent   <bert@bic.mni.mcgill.ca>
	* A series of smallish changes for Windows build compatibility:
	
	 - bicpl_clapack/dlamch.c - add volatile to all declarations 
	 of dlamc3_
	 - bicpl_clapack/Makefile.am - put f2c.h and blaswrap.h in a
	 noinst_HEADERS target
	 - Volumes/labels.c - avoid use of global
	 File_order_dimension_names
	 - Transforms/safe_compute_xfm.c - use HAVE_FORK rather than
	 NO_FORK and include config.h
	 - Prog_utils/random.c - If random(), srandom(), and
	 gettimeofday() are not available, use rand(), srand(), and
	 time(). Also make use of the standard constant RAND_MAX 
	 - Numerical/t_stat.c - If gamma() is not defined, use a private
	 copy.
	 - Numerical/numerical.c - Use HAVE_CBRT rather than NO_CBRT and
	 include config.h

	 - configure.in - add checks for fork(), srandom(), random(),
	 cbrt(), gamma(), gettimeofday()
	 - Makefile.am - remove unnecessary m4 files, add the Windows
	 build files	
	
2005-05-02  Bert Vincent   <bert@bic.mni.mcgill.ca>

	* Fixed odd problem in dlamch.c.  In the case where GCC 3.4.1 was
	used to compile the code with the -O2 option on Linux, the code
	would hang in an infinite loop in the function dlamc1_(). The bug
	could be avoided by disabling the optimizer. I masked the problem
	by declaring a few local variables 'volatile'.
	
2005-04-02  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* bicpl_clapack/Makefile.am (libbicpl_cla_la_SOURCES): Include
	headers blaswrap.h and f2c.h.

	* Include/bicpl.h:
	* Include/bicpl/deform_prototypes.h:
	* Include/bicpl/ds_prototypes.h:
	* Include/bicpl/geom_prototypes.h
	* Include/bicpl/image_prototypes.h:
	* Include/bicpl/march_prototypes.h:
	* Include/bicpl/numeric_prototypes.h:
	* Include/bicpl/object_prototypes.h:
	* Include/bicpl/prog_prototypes.h:
	* Include/bicpl/trans_prototypes.h:
	* Include/bicpl/vol_prototypes.h: Wrap files in "extern C"
	declaration if compiled with C++.

	* Include/bicpl/ds_prototypes.h: 