@@ -1,0 +1,10 @@
+%product bicpl
+%copyright 1993-2002 David MacDonald
+%vendor McConnell Brain Imaging Centre
+%packager Andrew L Janke <a.janke@gmail.com>
+%license COPYING
+%readme README
+%description File handling and image processing algorithms to do with MINC
+%version @VERSION@
+%requires netcdf
+%requires minc
